Change AdParameter and CategoryTypeAdParameter
